# pragmatic

./: .gitignore  README.md  pyproject.toml  tox.ini
.claude/memory/: MEMORY.md  feedback_break_system_packages.md
.devcontainer/: Dockerfile  devcontainer.json
evals/: run.py
evals/simple_calculation/: agent.json  cleanup.py  verify.py
evals/simple_calculation/workspace/: prompt.md
pragmatic/: __init__.py  __main__.py  agent.py  frontmatter.py
pragmatic/sandbox/: spec.py  subprocess.py
pragmatic/tools/: __init__.py  bash.py  finish.py
tests/agent/: test_agent.py  test_permissions.py
tests/cli/: test_main.py
tests/config/: test_config.py
tests/frontmatter/: test_frontmatter.py
tests/frontmatter/fixtures/: empty_frontmatter.md  with_frontmatter.md  without_frontmatter.md
tests/integration/: conftest.py  test_sandbox_permissions.py
tests/sandbox/: test_spec.py  test_subprocess.py
tests/tools/: test_bash.py  test_registry.py
